--- a/init/Dockerfile
+++ b/init/Dockerfile
@@ -1,15 +1,1 @@
-FROM hashicorp/terraform:0.12.6
-
-LABEL "com.github.actions.name"="terraform init"
-LABEL "com.github.actions.description"="Run terraform init"
-LABEL "com.github.actions.icon"="download"
-LABEL "com.github.actions.color"="purple"
-
-LABEL "repository"="https://github.com/hashicorp/terraform-github-actions"
-LABEL "homepage"="http://github.com/hashicorp/terraform-github-actions"
-LABEL "maintainer"="HashiCorp Terraform Team <terraform@hashicorp.com>"
-
-RUN apk --no-cache add jq curl
-
-COPY entrypoint.sh /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+FROM hashicorp/terraform:latest
