Upgrade APK packages after install
- fixes https://github.com/hashicorp/terraform-github-actions/issues/58
- relates to https://github.com/curl/curl/issues/4357

--- a/apply/Dockerfile
+++ b/apply/Dockerfile
@@ -10,6 +10,7 @@ LABEL "homepage"="http://github.com/hashicorp/terraform-github-actions"
 LABEL "maintainer"="HashiCorp Terraform Team <terraform@hashicorp.com>"
 
 RUN apk --no-cache add jq curl
+RUN apk upgrade
 
 COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
