--- a/action.yml
+++ b/action.yml
@@ -1,19 +1,19 @@
 name: 'Terraform GitHub Actions'
-description: 'Runs Terraform commands via GitHub Actions'
+description: 'Runs Terraform commands via GitHub Actions.'
 author: 'HashiCorp, Inc.'
 inputs:
-  terraform_version:
-    description: 'Terraform version to install'
+  tf_actions_version:
+    description: 'Terraform version to install.'
     required: true
-  terraform_subcommand:
-    description: 'Terraform subcommand to execute'
+  tf_actions_subcommand:
+    description: 'Terraform subcommand to execute.'
     required: true
-  terraform_working_dir:
-    description: 'Terraform working directory'
+  tf_actions_working_dir:
+    description: 'Terraform working directory.'
     default: ''
 outputs:
-  fmt:
-    description: 'All incorrectly formatted files'
+  tf_actions_plan_has_changes:
+    description: 'Whether or not the Terraform plan contained changes.'
 runs:
   using: 'docker'
   image: './Dockerfile'
