Adding commenting back to fmt

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,9 @@ inputs:
   tf_actions_working_dir:
     description: 'Terraform working directory.'
     default: ''
+  tf_actions_comment:
+    description: 'Whether or not to comment on pull requests.'
+    default: false
 outputs:
   tf_actions_plan_has_changes:
     description: 'Whether or not the Terraform plan contained changes.'
