--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: 'Terraform GitHub Actions'
 description: 'Runs Terraform commands via GitHub Actions.'
-author: 'HashiCorp, Inc.'
+author: 'HashiCorp, Inc. Terraform Team <terraform@hashicorp.com>'
+branding:
+  icon: 'terminal'
+  color: 'purple'
 inputs:
   tf_actions_version:
     description: 'Terraform version to install.'
@@ -10,7 +13,7 @@ inputs:
     required: true
   tf_actions_working_dir:
     description: 'Terraform working directory.'
-    default: ''
+    default: '.'
   tf_actions_comment:
     description: 'Whether or not to comment on pull requests.'
     default: true
