--- a/examples/pull_request_remote_backend_name/.github/workflows/example.yml
+++ b/examples/pull_request_remote_backend_name/.github/workflows/example.yml
@@ -1,8 +1,9 @@
-name: 'Terraform Pull Request Workflow'
+# An example workflow using the `remote` backend with `name`.
+name: 'Terraform Workflow'
 on:
   - pull_request
 jobs:
-  root:
+  remote:
     name: 'Terraform Actions'
     runs-on: ubuntu-latest
     steps:
@@ -23,6 +24,9 @@ jobs:
           tf_actions_subcommand: 'init'
           tf_actions_comment: true
         env:
+          # TF_CLI_ARGS_init is used to pass the backend configuration to the run.
+          # This way is chosen to replicate how one would use the `remote` backend with Terraform Cloud/Enterprise via automation.
+          TF_CLI_ARGS_init: '-backend-config="token=${{ secrets.TFP_TOKEN }}" -backend-config="organization=CHANGE_ME"'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
@@ -33,7 +37,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Plan'
-        uses: hashicorp/terraform-github-actions@refactor-bash
+        uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.13
           tf_actions_subcommand: 'plan'
