--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
     default: true
   tf_action_tfe_token:
     description: 'If you're using app.terraform.io as your remote backing store, your token'
-    require: false
+    required: false
 outputs:
   tf_actions_plan_has_changes:
     description: 'Whether or not the Terraform plan contained changes.'
