Add output whether formatting was written to source

--- a/action.yml
+++ b/action.yml
@@ -32,6 +32,8 @@ outputs:
     description: 'Whether or not the Terraform plan contained changes.'
   tf_actions_plan_output:
     description: 'The Terraform plan output.'
+  tf_actions_fmt_written:
+    description: 'Whether or not the Terraform formatting was written to source files.'
 runs:
   using: 'docker'
   image: './Dockerfile'
